--- a/build.yaml
+++ b/build.yaml
@@ -11,6 +11,7 @@ pandoc_common:
   - preamble/authorization.md
   - separators/mainmatter.md
 ## Include chapters here    
+  - chapters/introduccion.md
   - chapters/test_chapter.md
   - separators/backmatter.md
 ## Include appendices here      
