--- a/settings.yaml
+++ b/settings.yaml
@@ -16,11 +16,11 @@ header-includes:
 - \pagestyle{fancy}
 # Para incluir fichero separado con código LaTeX
 #- \input{separators/preamble.tex}
-title: Un Trabajo Fin de Grado excelente 
-author: Fulanito Pérez Gómez y Gonzalo González Gonzalvo
+title: Implementación de una infraestructura REST con privacidad para GTD 
+author: Pablo Gamo González, Carlos Gómez López, Javier Gil Caballero, Alejandro Del Río Caballero
 advisor: Juan Carlos Sáez Alcaide
 department: Departamento de Arquitectura de Computadores y Automática
-program: Grado en Ingeniería Informática
-course: 2022-2023
-date: 2023
+program: Grado en Ingeniería del Software y Grado en Ingeniería Informática
+course: 2023-2024
+date: 2024
 ---
