--- a/build.yaml
+++ b/build.yaml
@@ -17,6 +17,7 @@ pandoc_common:
   - chapters/modelodatos.md
   - chapters/backend.md
   - chapters/agentesconversacionales.md
+  - chapters/manualusuario.md
   - chapters/test_chapter.md
   - separators/backmatter.md
 ## Include appendices here      
