--- a/settings.yaml
+++ b/settings.yaml
@@ -15,6 +15,8 @@ header-includes:
 - \fancyhf{}
 - \cfoot{\thepage}
 - \pagestyle{fancy}
+- \usepackage{hyperref}
+- \hypersetup{colorlinks=true,linkcolor=blue,filecolor=magenta,urlcolor=cyan,pdftitle={Implementación de una infraestructura REST con privacidad para GTD basada en Express y React Native},pdfauthor={Pablo Gamo González, Carlos Gómez López, Javier Gil Caballero, Alejandro Del Río Caballero}, pdfpagemode=FullScreen, }
 # - \usepackage{libertine}
 # Para incluir fichero separado con código LaTeX
 #- \input{separators/preamble.tex}
